syntax = "proto3";

message User {
  string id = 1;
  string email = 2;
  string role = 3;
  string status = 4;
  string created_at = 5;
  string email_hash = 6;
  string signature = 7;
}

message UserList {
  repeated User users = 1;
}